# tikzjs

./: .eslintrc.js  .gitignore  .prettierrc.json  CLAUDE.md  Makefile  README.md  eslintrc.config.js  index.d.ts  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json
.claude/: settings.json
.claude/commands/: add-option.md  add-path-op.md  e2e-test.md  fix-fixture.md  improve-d3.md  improve-svg.md  improve-ui.md  improve.md  new-fixture.md  refactor.md
.github/workflows/: golden-diff.yml  test.yml
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: App.tsx  index.css  theme.ts
python/: pyproject.toml  requirements.txt
python/tikzjs_compare/: __init__.py  __main__.py  compare.py  components.py  config.py  fetch.py  report.py  svg.py
scripts/: generateExtra.sh  generateGolden.sh  preview.js  server.js  visualdiff.js
src/: core.ts  index.ts  main.ts  tikzjs.d.ts  tikzjs.js
src/generators/: Context.ts  Element.ts  Generator.ts  utils.ts
src/ir/: types.ts
src/math/: index.ts  pretextMeasurer.ts  textLayout.ts
src/parser/: TikzAST.ts  TikzLiteral.ts  TikzOptions.ts  TikzPath.ts  TikzPathOperations.ts  TikzRoot.ts  _tikzjs.d.ts  _tikzjs.js  _tikzjs.pegjs  _tikzjs.ts  ast.d.ts  ast.ts  factory.ts  group_checker.ts  index.ts  optionParser.ts  parser.ts  ref.latex.pegjs  styleResolver.ts  tikzjs.d.ts  tikzjs.js  tikzjs.pegjs
src/preprocessor/: foreachExpander.ts  index.ts  knotPreprocessor.ts  (+4 more)
test/: generator.svg.test.ts  main.test.ts  parser.test.ts  test.js
(+258 files in other folders)
